index.css
/* ALL range*/
.container {
    margin: 0 auto 0 auto;
    width: 480px;
}
/* header bar*/
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 0;
    margin-top: 10px;
    background-color: red;
}
/* .header__menu {} */
.header__menu-icon {
    width: 50px;
}
/* .header__logo{} */
.header__image {
    width: 50px;
}
.header__buttons {
    display: flex;
    gap: 20px;
    justify-content: space-around;
}
/* .header__button{} */
.header__button--1 {
    width: 50px;
}
.header__button--2 {
    width: 50px;
}
/* .main{} */
/*main__slider*/
.main__slider-image {
    width: 100%;
    height: auto;
    object-fit: contain;
}
.main__wrapper {
}
.main__block {
    margin: 50px 0px;
}
.block__textbox {
    margin: 32px 0 20px 0;
}
.block__title {
    font-size: 32px;
    color: lightgoldenrodyellow;
    background-color: orange;
}
.block__descriptions {
    justify-content: flex-start;
}
.block__description {
    margin: -20px 0 0 0;
    font-size: 13px;
    color: gray;
    background-color: greenyellow;
}
.block__description--date {
    padding: 8px;
}

.block__content {
    display: flex;
    flex-wrap: wrap;
}
.content__product {
    /* text-align: center;
    line-height: 300px; */
    width: 50%;
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-size: 25px;
    font-weight: 900;
    font-style: oblique;
    opacity: 0, 8;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    transition: all 0.1s ease-in-out;
}
.content__product:hover {
    font-size: 2em;
}
.content__product--1 {
    background-image: url(image/pickup/Design_simple.jpg);
}
.content__product--2 {
    background-image: url(image/pickup/Design_natural.jpg);
}
.content__product--3 {
    background-image: url(image/pickup/Design_girly.jpg);
}
.content__product--4 {
    background-image: url(image/pickup/Design_chic.jpg);
}
/* .main__block--2{} */
.content__text-product--1 {
}
.content__text-product--2 {
}
.content__text-product--3 {
}
.content__text-product--4 {
}
.content__text-product--5 {
}
.content__text-product--6 {
}
.text-product__image-box {
}
.image-box_img {
}

